--- a/learn/index.html
+++ b/learn/index.html
@@ -6,7 +6,7 @@
   </head>
   
   <body>
-    <h1 style="text-align:center; margin-top:250px">COMING SOON BEB !!!</h1>
+    <h1 style="text-align:center;">COMING SOON BEB !!!</h1>
   </body
 
 </html>
