--- a/learn/index.html
+++ b/learn/index.html
@@ -7,7 +7,9 @@
   
   <body>
     <h1 style="text-align:center;">COMING SOON BEB !!!</h1>
+    <div style="margin:auto; display:block;">
     <img src="fuck-you-png.png">
+    </div>
   </body
 
 </html>
