--- a/learn/index.html
+++ b/learn/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1 style="text-align:center;">COMING SOON BEB !!!</h1>
     <div style="margin:auto; display:block;">
-      <img src="fuck-you-png.png">
+      <img src="fuck-you-png.png" style="margin:auto; display:block;">
     </div>
   </body
 
