--- a/learn/index.html
+++ b/learn/index.html
@@ -256,7 +256,7 @@
                 <div class="col col-md-6">
                     <div class="textbox text-gray-dark">
                         <h3>Laravel News</h3><hr/>
-                        <p><strong>Materi Ini Di Desain Untuk :</strong><br>Menengah,&nbsp;<del>Mahir</del></p>
+                        <p><strong>Materi Ini Di Desain Untuk :</strong><br>Menengah,&nbsp;Mahir</p>
                         <p><strong>Objective&nbsp;:</strong><br>Pelajar dapat mengerti framework Laravel</p>
                         <p><strong>Bahasa &amp; Database Yang Di Pelajari&nbsp;:</strong><br>Php, MySQL, CSS, Bootstrap</p>
                         <p><strong>Pembahasan&nbsp;:</strong><br>Memperbaiki dan membahas lebih mendalam tentang masalah yang di temui dalam pemabahan web berita menggunakan Laravel</p>
