--- a/learn/index.html
+++ b/learn/index.html
@@ -281,7 +281,7 @@
                 <div class="row margin-top-1x margin-bottom-1x">
                     <div class="col   col-md-12">
                         <div class="textbox" style="color:#ecf0f1">
-                            <p class="text-center margin-none">Copyright © 2018 <a href="facebook.com/qbirr" target="_blank" style="color: white">QBirr</a>. All rights reserved.</p>
+                            <p class="text-center margin-none">Copyright © 2018 <a href="http://www.facebook.com/qbirr" target="_blank" style="color: white">QBirr</a>. All rights reserved.</p>
                         </div>
                     </div>
                 </div>
