--- a/learn/about.html
+++ b/learn/about.html
@@ -59,7 +59,7 @@
                                     <h1 class="heading text-heading-bold">About SukaLearn</h1>
                                 </div></div>
                     <div class="textbox text-gray-dark">
-                        <p align="justify">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SukaLearn adalah sebuah situs pendidikan programming yang dibuat oleh <a href="sukadroid.github.io">Sukadroid Dev</a>. Dengan materi yang di desain untuk masyarakat umum. Jangan khawatir apabila anda tidak sama sekali memiliki ataupun mengerti tentang programming, karena disini kita mengajarkan benar benar dari NOL, sehingga siapapun andaakan mengerti dan bisa menjadi seorang Web Programmer.</p>
+                        <p align="justify">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SukaLearn adalah sebuah situs pendidikan programming yang dibuat oleh <a href="http://sukadroid.github.io">Sukadroid Dev</a>. Dengan materi yang di desain untuk masyarakat umum. Jangan khawatir apabila anda tidak sama sekali memiliki ataupun mengerti tentang programming, karena disini kita mengajarkan benar benar dari NOL, sehingga siapapun andaakan mengerti dan bisa menjadi seorang Web Programmer.</p>
                         <p>Materi dibuat dalam bentuk studi kasus dengan 4 tujuan berikut:</p>
                         <ul>
                             <li>Peserta mendapatkan pengetahuan dasar dasar web programming.</li>
@@ -153,7 +153,7 @@
                     <div class="row margin-top-1x margin-bottom-1x">
                         <div class="col   col-md-12">
                             <div class="textbox" style="color:#ecf0f1">
-                                <p class="text-center margin-none">Copyright © 2018 <a href="facebook.com/qbirr" style="color: white">QBirr</a> . All rights reserved.</p>
+                                <p class="text-center margin-none">Copyright © 2018 <a href="http://www.facebook.com/qbirr" style="color: white">QBirr</a> . All rights reserved.</p>
                             </div>
                         </div>
                     </div>
