--- a/learn/index.html
+++ b/learn/index.html
@@ -287,6 +287,7 @@
                 </div>
             </div>
         </div>
+        <p>&copy; {year} yourcompany. Powered by <a href="https://www.rackh.com/" target="_blank">RackH</a></p>
 
         <script src="js/jquery.js" type="text/javascript"></script>
         <script src="js/bootstrap.js" type="text/javascript"></script>
