--- a/learn/index.html
+++ b/learn/index.html
@@ -281,7 +281,7 @@
                 <div class="row margin-top-1x margin-bottom-1x">
                     <div class="col   col-md-12">
                         <div class="textbox" style="color:#ecf0f1">
-                            <p class="text-center margin-none">&copy; {year} yourcompany. Powered by <a href="https://www.rackh.com/" target="_blank">RackH</a></p>
+                            <p class="text-center margin-none">Copyright &copy; 2018 Programers dot Me. Powered by <a href="https://www.rackh.com/" target="_blank">RackH</a></p>
                         </div>
                     </div>
                 </div>
